Дз Коллекции :hash Задание 3/1